number of tasks feature Completed

--- a/Backend/src/Mail_Template/template.html
+++ b/Backend/src/Mail_Template/template.html
@@ -61,6 +61,10 @@
           <li><strong>Name:</strong> {{name}}</li>
           <li><strong>Employee ID:</strong> {{employeeId}}</li>
           <li><strong>Department:</strong> {{department}}</li>
+          <li><strong>Completed Tasks:</strong> {{complete}}</li>
+          <li><strong>Partial Completed Tasks:</strong> {{partial}}</li>
+          <li><strong>Incomplete Tasks:</strong> {{incomplete}}</li>
+          <li><strong>Total Tasks:</strong> {{total}}</li>
         </ul>
         <p>Thank you!</p>
       </div>
